--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
 <!-- 2HUMN4LW3ZFUA2OI -->
