--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section class="about" id="about">
       <div class="row">
         <div class="about-img col">
-          <img src="../resources/ProfilePicture.png" alt="" />
+          <img src="resources/ProfilePicture.png" alt="" />
         </div>
         <div class="about-text col">
           <h2>About <span>Me</span></h2>
@@ -247,7 +247,7 @@
           <div class="portfolio-content">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mx-5 p-5">
               <div class="row1 col">
-                <img src="../resources/e-invoicing-1.png" alt="" />
+                <img src="resources/e-invoicing-1.png" alt="" />
                 <div class="layer">
                   <h5>E-Invoicing Web App</h5>
                   <p>
@@ -262,7 +262,7 @@
                 </div>
               </div>
               <div class="row1 col">
-                <img src="../resources/dashboard-design-concept.png" alt="" />
+                <img src="resources/dashboard-design-concept.png" alt="" />
                 <div class="layer">
                   <h5>DashBoard Admin</h5>
                   <p>
@@ -277,7 +277,7 @@
                 </div>
               </div>
               <div class="row1 col">
-                <img src="../resources/e-invoicing-1.png" alt="" />
+                <img src="resources/e-invoicing-1.png" alt="" />
                 <div class="layer">
                   <h5>Web Design</h5>
                   <p>
@@ -348,7 +348,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="../main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
 <!-- 2HUMN4LW3ZFUA2OI -->
